--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fis3-server-php",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "fis3 server php",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "php"
   ],
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "4.10.1",
     "morgan": "1.6.1",
     "node-phpcgi": "0.3.5",
